feat: endpoint for worker stats
